--- a/AccountManagement/templates/AccountManagement/register.html
+++ b/AccountManagement/templates/AccountManagement/register.html
@@ -1,5 +1,6 @@
-<h1>Signup</h1>
-<form class="site-form" action="/AccountManagement/register" method="post">
+<h1>TunerLink Signup</h1>
+<form class="site-form" action="/AccountManagement/register/" method="post">
+    {% csrf_token %}
     {{ form }}
     <input type="submit" value="Signup">
 </form>
