--- a/main/templates/main/homepage.html
+++ b/main/templates/main/homepage.html
@@ -1,23 +1,16 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Homepage</title>
-    </head>
-    <body>
-        <h1>This is the homepage</h1>
-        <p>Welcome to TunerLink</p>
-        <!--- Temporary! The logout button should be part of the nav bar which should be a global template --->
-        <nav>
-            <ul>
-                <li>
-                    <form class="logout-link" action="{% url 'AccountManagement:logout' %}" method="post">
-                        {% csrf_token %}
-                        <button type="submit">Logout</button>
-                    </form>
-                </li>
-            </ul>
-        </nav>
-        <!--- #end temporary --->
-    </body>
-</html>
+{% extends 'main/base.html' %}
+
+<title>{% block title %}Home{% endblock %}</title>
+
+{% block body %}
+
+<center>
+<h1> This is the Homepage! </h1>
+
+<p>
+    Welcome to TunerLink
+</p>
+</center>
+
+
+{% endblock %}
