working on search

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -33,10 +33,15 @@
           </ul>
           <div class="container-sm">
             <div class="center">
-          <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+
+          <form class="d-flex" method=POST action="{% url 'AccountManagement:search' %}">
+
+            {% csrf_token %}
+
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="searched">
             <button class="btn btn-outline-light" type="submit">Search</button>
           </form>
+
             </div>
           </div>
         </div>
